--- a/Web_testing/0.1.Information_Gathering/4.1.6.Identify_Application_Entry_Points.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.6.Identify_Application_Entry_Points.md
@@ -4,13 +4,11 @@ $${\color{green}Mục \space tiêu \space kiểm \space }$$
 
 - Xác định điểm xâm nhập và điểm tiêm nhiễm có thể xảy ra thông qua phân tích yêu cầu và phản hồi
 
-# HOW TO TEST #
+# CÁCH KIỂM TRA #
 
 **1. Giao tiếp ứng dụng**
 
-- Xác định các yêu cầu HTTP: bao gồm các yêu caafu GET, POST và bất kỳ tham số, biểu mẫu được gửi tới ứng dụng 
-
-- Analyze HTTP Requests: While navigating through the application, pay attention to all HTTP requests, including GET and POST requests, as well as any parameters and form fields sent to the application.
+- Xác định các yêu cầu HTTP: bao gồm các yêu cầu GET, POST và bất kỳ tham số, biểu mẫu được gửi tới ứng dụng 
     
 **2. Kiểm tra phản hồi**
 - Cookies: Xác định vị trí mà cookie mới được thiết lập, thay đổi hoặc bị xóa 
