--- a/Web_testing/0.1.Information_Gathering/4.1.9.Map_Application_Architecture.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.9.Map_Application_Architecture.md
@@ -2,11 +2,22 @@
 
 $${\color{green}Mục \space tiêu}$$
 
-- Tạo 1 bản đồ chi tiết về cấu trúc ứng dụng dựua trên tìm kiếm và kiểm tra
+- Tạo 1 bản đồ chi tiết về cấu trúc ứng dụng dựa trên tìm kiếm và kiểm tra
 
-# CÁCH KIỂM TRA
+# KIỂM TRA
 
-1. Kiểm tra kiến trúc ứng dụng
+- Tường lửa: kiểm tra bảo về máy chủ web thông qua phân tích cỏng và gói dữ liệu
+- Proxy ngược : phát hiện qua  máy chủ và phản hồi HTTP
 
-- 
-3. 
+> Reverse proxy là proxy server trung gian giữa 1 máy chủ và 1 client gửi tới các yêu cầu. Nó kiểm soát các yêu cầu của client, nếu hợp lệ sẽ luân chuyển đến các server thích hợp
+
+- Bộ cân bằng tải: Phát hiện thông qua việc kiểm tra nhiều yêu cầu đến máy chủ và các tiêu đề khác nhau
+
+> Load blancer là việc phân phối hiệu quả lưu lựng truy cập đến nhóm backend servers. Chức năng: phân phối các client request 1 cách hiệu quả trên nhiều servers
+
+- Máy chủ ứng dụng và cơ sở dữ liệu: Dựa trên hoạt động của ứng dụng (tạo nội dung động, cookie, URL rewrite, xử lý lỗi).
+
+> Ví dụ về URL rewrite: Khi gõ đường link `http://domain.com/news/2014/24/04` thì khi request lên webserver sẽ thành `http://domain.com/index.php?mod=news&year=2014&day=24&month=04`
+>
+> Lợi ích : URL dễ dàng hơn với search engine, tăng cường khả năng bảo 
+> 
