--- a/Web_testing/0.2.Configuration_and_Deployment_Management_Testing/2.Test_Application_Platform_Configuration.md
+++ b/Web_testing/0.2.Configuration_and_Deployment_Management_Testing/2.Test_Application_Platform_Configuration.md
@@ -25,7 +25,7 @@ $${\color{green}Black-Box \space Testing}$$
 
 **2. Bình luận đánh giá**
 
-- các lập trình viên thường để lại bình luận ở phần HTML hoặc source code, điều này có thể làm rò rỉ những thông tin nhạy cảm
+- Các lập trình viên thường để lại bình luận ở phần HTML hoặc source code, điều này có thể làm rò rỉ những thông tin nhạy cảm
 - Đánh giá lại qua phân tích nội dung tĩnh và động của máy chủ web và tìm những bình luận có trong phần HTML và source code
 
 **3.Cấu hình hệ thống:**
@@ -37,33 +37,25 @@ $${\color{green}Black-Box \space Testing}$$
 
 $${\color{green} Kiểm \space thử \space hộp \space xám: \space Đánh \space giá \space cấu \space hình}$$	
 
-**1.Importance**: Proper configuration of web and application servers is crucial for security. Incorrect configurations can open up security vulnerabilities.
+**Những vấn đề cần chú ý:**
 
-**2.Guidelines:**
+- Chỉ bật các module cần thiết cho ứng dụng để làm giảm bề mặt tấn công
+- Xử lý lỗi máy chủ (40x và 50x) bằng các trang tùy chỉnh thay vì các trang máy chủ web mặc định để tránh việc mã bị rò rỉ thông qua các lỗi này
+- Đảm bảo phần mềm máy chủ chạy với quyền tối thiểu để tránh lỗi trong phần mềm gây ảnh hưởng trực tiếp đến toàn bộ hệ thống
+- Đảm bảo phần mềm máy chủ ghi lại cả truy cập hợp lệ và truy cập lỗi
+- Đảm bảo máy chủ được cấu hình đúng để xử lý tình trạng quá tải và ngăn chặn các cuộc tấn công DoS
+- Đảm bảo quyền truy cập hạn chế vào phần chia sẻ chứa các thông tin nhạy cảm
 
-- Enable Only Needed Modules: Activate only the necessary modules or extensions for the application to reduce the attack surface.
-- Custom Error Pages: Use custom pages for server errors (like 40x, 50x) to avoid leaking information through default error messages.
-- Minimize Privileges: Ensure the server software runs with minimal privileges to limit the impact of potential vulnerabilities.
-- Logging: Ensure the server logs both legitimate access and errors properly.
-- Handle Overloads: Configure the server to manage overloads and prevent Denial of Service (DoS) attacks.
-- Secure Configuration Files: Avoid granting non-administrative identities access to critical configuration files. Encrypt sensitive information and limit access to configuration files.
+$${\color{green}ghi \space nhật \space ký}$$
 
-$${\color{green}Logging}$$
+**Những vấn đề cần chú ý**
 
-**1. Importance**: Logging is crucial for detecting application flaws and attacks. Proper log management helps monitor and analyze issues.
+- Nhật ký không nên chứa thông tin nhạy cảm
+- Nhật ký nên được lưu trữ trên máy chủ chuyên dụng
+- Các nhật ký được quay vòng luân phiên để tránh các vấn đề về dung lượng đĩa, sau đó nên được nén lại và điều chỉnh quyền truy cập khi cần thiết
+- Bảo vệ quyền truy cập để ngăn chặn việc xem trái phép
 
-**2.Key Considerations:**
+$${\color{green}Thông \space tin \space nhạy \space cảm \space trong \space nhật \space ký}$$
 
-- Sensitive Information: Logs should not contain sensitive data like passwords or personal information.
-- Log Storage: Store logs in a separate location to prevent loss if the server is compromised and to facilitate log analysis.
-- Log Rotation: Ensure logs are rotated to prevent disk space issues. Rotated logs should be compressed and permissions adjusted as needed.
-- Access Control: Protect log access to prevent unauthorized viewing and ensure logs are reviewed for attack detection.
-
-$${\color{green}Sensitive \space Information \space in \space Logs}$$
-
-Avoid logging sensitive information such as source code, session IDs, passwords, and financial data. This helps prevent data leaks and compliance issues.
-
-$${\color{green}Log \space Testing}$$
-
-Verify that logs are stored and rotated properly, and assess if logging can be used to detect suspicious activities, such as error messages indicating possible attacks.
+- Tránh việc lưu trữ những thông tin nhạy cảm trong tệp nhật ký, ví dụ như dữ liệu cá nhân, mật khẩu, khóa mã hóa, ,...
 
