Update 5.1.Testing for Oracle.md

--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
@@ -6,52 +6,109 @@
 
 - Ví dụ
 
->-- Tạo bảng mẫu
->
->CREATE TABLE employees (
->
->   employee_id NUMBER,
->
->    name VARCHAR2(100),
->
->    salary NUMBER
->
->);
->
->-- Thêm một bản ghi vào bảng employees
->
->INSERT INTO employees (employee_id, name, salary)
->
->VALUES (1, 'John Doe', 5000);
+```sql
+-- Tạo bảng mẫu
+CREATE TABLE employees (
+    employee_id NUMBER,
+    name VARCHAR2(100),
+    salary NUMBER
+);
 
->-- Kiểm tra bảng employees sau khi thêm
->
->SELECT * FROM employees;
->
->-- Kết quả sẽ là:
->
->-- EMPLOYEE_ID | NAME      | SALARY
->
->-- ------------|-----------|--------
->
->-- 1           | John Doe  | 5000
+-- Thêm một bản ghi vào bảng employees
+INSERT INTO employees (employee_id, name, salary)
+VALUES (1, 'John Doe', 5000);
+
+-- Kiểm tra bảng employees sau khi thêm
+SELECT * FROM employees;
+
+-- Kết quả sẽ là:
+-- EMPLOYEE_ID | NAME      | SALARY
+-- ------------|-----------|--------
+-- 1           | John Doe  | 5000
+```
 
 -> Ở bước này, dữ liệu chỉ được thay đổi trong bộ nhớ chứ chưa được lưu vĩnh  vào cơ sở dữ 
 
->-- Thực hiện lệnh COMMIT để cam kết thay đổi
->COMMIT;
->
->-- Kiểm tra lại bảng employees
->
->SELECT * FROM employees;
->
->-- Kết quả vẫn là:
->
->-- EMPLOYEE_ID | NAME      | SALARY
->
->-- ------------|-----------|--------
->
->-- 1           | John Doe  | 5000
+```sql
+-- Thực hiện lệnh COMMIT để cam kết thay đổi
+COMMIT;
+
+-- Kiểm tra lại bảng employees
+SELECT * FROM employees;
+
+-- Kết quả vẫn là:
+-- EMPLOYEE_ID | NAME      | SALARY
+-- ------------|-----------|--------
+-- 1           | John Doe  | 5000
+```
 
 -> Sau khi thực thi lệnh `COMMIT`, thay đổi đã được lưu vĩnh viễn vào cơ sở dữ liệu.
+
+# LIST 
+
+# Comments
+
+| Type                       | Description                       |
+|----------------------------|-----------------------------------|
+| `--`                 | SQL comment                       |
+
+# String concatenation
+
+```
+'hi'||'hello'
+```
+
+# Substring
+
+```
+SUBSTR('foobar', 4, 2)
+```
+
+# List Database, Columns
+
+```sql
+SELECT * FROM all_tables
+SELECT * FROM all_tab_columns WHERE table_name = 'TABLE-NAME-HERE'
+```
+
+# Conditional errors
+
+ ```sql
+SELECT CASE WHEN (Condition) THEN TO_CHAR(1/0) ELSE NULL END FROM dual
+```
+
+- Ví dụ
+
+```sql
+SELECT product_id, 
+       CASE WHEN quantity < 0 THEN 'Invalid' ELSE quantity END AS available_quantity 
+FROM products;
+```
+
+# Time delays
+
+```sql
+dbms_pipe.receive_message(('a'),10)
+```
+
+# Conditional time delays
+
+```sql
+SELECT CASE 
+           WHEN (YOUR-CONDITION-HERE) 
+           THEN 'a' || DBMS_PIPE.RECEIVE_MESSAGE(('a'), 10) 
+           ELSE NULL 
+       END 
+FROM dual;
+```
+
+# Liệt kê đặc quyền
+
+```sql
+select * from dba_java_policy -- trả về tất cả chính sách Java mà bạn có quyền truy cập trong toàn bộ cơ sở dữ liệu
+select * from user_java_policy -- trả về tất cả chính sách Java mà người dùng có quyền truy cập
+```
+
+# Cấp đặc quyền
+
 
