Update 5.1.Testing for Oracle.md

--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
@@ -42,9 +42,7 @@ SELECT * FROM employees;
 -- 1           | John Doe  | 5000
 ```
 
--> Sau khi thực thi lệnh `COMMIT`, thay đổi đã được lưu vĩnh viễn vào cơ sở dữ liệu.
-
-# LIST 
+-> Sau khi thực thi lệnh `COMMIT`, thay đổi đã được lưu vĩnh viễn vào cơ sở dữ liệu. 
 
 # Comments
 
@@ -111,4 +109,8 @@ select * from user_java_policy -- trả về tất cả chính sách Java mà ng
 
 # Cấp đặc quyền
 
+```sql
+exec dbms_java.grant_permission('BEYONCE', 'SYS:java.io.FilePermission','<<ALL FILES>>','execute');
+-- lệnh này cho phép người dùng BEYONCE quyền thực thi tệp FilePermission cho tất cả tệp trong hệ thống
+```
 
