Update 5.1.Testing for Oracle.md

--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
@@ -62,6 +62,13 @@ SELECT * FROM employees;
 SUBSTR('foobar', 4, 2)
 ```
 
+# Database version
+
+```sql
+SELECT banner FROM v$version
+SELECT version FROM v$instance
+```
+
 # List Database, Columns
 
 ```sql
