--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
@@ -1,6 +1,6 @@
 # Tổng quan
 
-- MySQL là một phần mềm mã nguồn mở, chạy trên nhiều nền tảng
+- MySQL là một phần mềm mã nguồn mở, chạy trên nhiều nền tảng ( Linux, macOS, Windows, Oracle Solaris, OpenBSD và HP-UX,..)
 - MySQL có thể kết hợp với mọi ngôn ngữ lập trình khác, thông thường là PHP
 - MySQL không cho phép hủy query giữa chừng
 - Sử dụng Enterprise Manager của Oracle
