Update 5.1.Testing for Oracle.md

--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
@@ -128,3 +128,10 @@ exec dbms_java.grant_permission('BEYONCE', 'SYS:java.io.FilePermission','<<ALL F
 -- lệnh này cho phép người dùng BEYONCE quyền thực thi tệp FilePermission cho tất cả tệp trong hệ thống
 ```
 
+# Current User
+
+```sql
+SELECT user FROM dual -- `dual` là bảng sử dụng để thực hiện các truy vấn mà không cần truy cập vào 1 bảng thực sự
+```
+
+
