Update 5.1.Testing for Oracle.md

--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
@@ -134,4 +134,22 @@ exec dbms_java.grant_permission('BEYONCE', 'SYS:java.io.FilePermission','<<ALL F
 SELECT user FROM dual -- `dual` là bảng sử dụng để thực hiện các truy vấn mà không cần truy cập vào 1 bảng thực sự
 ```
 
+# Version
+
+```sql
+SELECT banner FROM v$version WHERE banner LIKE ‘Oracle%’;
+SELECT banner FROM v$version WHERE banner LIKE ‘TNS%’;
+SELECT version FROM v$instance;
+```
+
+# Current Database
+
+```sql
+SELECT global_name FROM global_name;
+SELECT name FROM v$database; -- view động chứa thông tin về cơ sở dữ liệu hiện tại
+SELECT instance_name FROM v$instance;
+SELECT SYS.DATABASE_NAME FROM DUAL;
+```
+
+
 
