Update 5.1.Testing for Oracle.md

--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
@@ -27,7 +27,7 @@ SELECT * FROM employees;
 -- 1           | John Doe  | 5000
 ```
 
--> Ở bước này, dữ liệu chỉ được thay đổi trong bộ nhớ chứ chưa được lưu vĩnh  vào cơ sở dữ 
+-> Ở bước này, dữ liệu chỉ được thay đổi trong bộ nhớ chứ chưa được lưu vĩnh viễn vào cơ sở dữ liệu
 
 ```sql
 -- Thực hiện lệnh COMMIT để cam kết thay đổi
