--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
@@ -42,6 +42,7 @@ SELECT * FROM Table WHERE id = ''';
 SELECT * FROM Table WHERE id = '';
 SELECT * FROM Table WHERE id = '"';
 SELECT * FROM Table WHERE id = '""'; -- "" trả về chuỗi rỗng
+```
 
 # String concatenation
 
@@ -161,7 +162,7 @@ select `4` from (select 1,2,3,4,5,6 union select * from users)dbname;
 # List Users
 
 ```sql
-SELECT user FROM mysql.user; — priv
+SELECT user FROM mysql.user; 
 ```
 
 # Current User
