Update 5.1.Testing for Oracle.md

--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.1.Testing for Oracle.md
@@ -1,7 +1,7 @@
 # Tổng quan #
 
 - Oracle sử dụng PL/SQL (Procedural Language/SQL)
-- Hỗ trợ hệ điều hành Windows, Linux, Solaris, HP-UX, OS X, z / OS, AIX.
+- Hỗ trợ hệ điều hành Windows, Mac OS X, Linux, UNIX, z / OS
 - Trong Oracle, không có giao dịch nào được cam kết cho đến khi DBA rõ ràng ban hành lệnh COMMIT.
 
 - Ví dụ
