--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.2.Testing_for_MySQL.md
@@ -1,8 +1,11 @@
 # Tổng quan
 
-- MySQL là một phần mềm mã nguồn mở, chạy trên nhiều nền tảng ( Linux, macOS, Windows, Oracle Solaris, OpenBSD và HP-UX,..)
+- MySQL là một phần mềm mã nguồn mở, chạy trên nhiều nền tảng ( Windows, Mac OS X, Linux, UNIX, z / OS, BSD, Symbian, AmigaOS )
 - MySQL có thể kết hợp với mọi ngôn ngữ lập trình khác, thông thường là PHP
 - MySQL không cho phép hủy query giữa chừng
+- MySQL miễn phí
+- Sử dụng Enterprise Manager của Oracle.
+- MySQL cung cấp hỗ trợ trên trang web và điện thoại
 - Sử dụng Enterprise Manager của Oracle
 
 # MYSQL Testing 
