--- a/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.3.Testing_for_SQL_Server.md
+++ b/Web_testing/0.7.Input_Validation_Testing/5.Testing_for_SQL_Injection/5.3.Testing_for_SQL_Server.md
@@ -3,6 +3,8 @@
 - SQL Server hoạt động tốt với .NET
 - SQL server sử dụng một storage engine được phát triển bởi Microsoft
 - Cho phép hủy query giữa chừng
+- SQL Server là phần mềm trả phí.
+- Sử dụng Management Studio (SSMS)
 - SQL Server chủ yếu hỗ trợ Windows, với các tùy chọn triển khai đám mây cho Linux và macOS thông qua Docker.
 
 # String concatenation
